tket/tket-rs/src/snapshots/tket__resource__tests__4_qubits.snap
---
source: tket/tket-rs/src/resource.rs
expression: info
---
Found 0 copyable wires
Found 4 resource paths:
  - ResourceId(0):
    * H(Node(7)) [IncomingPort(0) -> OutgoingPort(0)]
    * CX(Node(11)) [IncomingPort(0) -> OutgoingPort(0)]

  - ResourceId(1):
    * H(Node(8)) [IncomingPort(0) -> OutgoingPort(0)]
    * CX(Node(11)) [IncomingPort(1) -> OutgoingPort(1)]

  - ResourceId(2):
    * H(Node(9)) [IncomingPort(0) -> OutgoingPort(0)]
    * CX(Node(12)) [IncomingPort(0) -> OutgoingPort(0)]

  - ResourceId(3):
    * H(Node(10)) [IncomingPort(0) -> OutgoingPort(0)]
    * CX(Node(12)) [IncomingPort(1) -> OutgoingPort(1)]
